Colaboratory を使用して作成しました

--- a/python_tips.ipynb
+++ b/python_tips.ipynb
@@ -6,7 +6,7 @@
       "name": "python_tips.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNrJaSSlfDrim7fFGVd8HHF",
+      "authorship_tag": "ABX9TyNLZNuSGEC/qPMAB8I03Tv1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,6 +65,21 @@
       "cell_type": "code",
       "metadata": {
         "id": "uP5Y2duA4Btj"
+      },
+      "source": [
+        "import cv2\n",
+        " \n",
+        "# 画像ファイルをグレースケールで読み込む\n",
+        "file = \"/content/sample_data/test.jpeg\" # 例\n",
+        "img = cv2.imread(file, 0)"
+      ],
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6zch-En043nk"
       },
       "source": [
         ""
