--- a/preprocess_knock_Python_Azure.ipynb
+++ b/preprocess_knock_Python_Azure.ipynb
@@ -436,10 +436,10 @@
       "metadata": {
         "trusted": false,
         "id": "yH8GaveQqtd8",
-        "outputId": "ac459fd9-c1a3-4cbb-895f-f450f31c868f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ac459fd9-c1a3-4cbb-895f-f450f31c868f"
       },
       "cell_type": "code",
       "source": [
@@ -478,11 +478,11 @@
       "metadata": {
         "trusted": false,
         "id": "u8IrTCfMqtd-",
-        "outputId": "70348476-a881-444b-ba50-4b32493164b0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 81
-        }
+        },
+        "outputId": "70348476-a881-444b-ba50-4b32493164b0"
       },
       "cell_type": "code",
       "source": [
@@ -636,11 +636,11 @@
       "metadata": {
         "trusted": false,
         "id": "WRdNZ8UQqtd_",
-        "outputId": "2d2481ba-3f7c-4df5-dcd3-608c04b43c50",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 426
-        }
+        },
+        "outputId": "2d2481ba-3f7c-4df5-dcd3-608c04b43c50"
       },
       "cell_type": "code",
       "source": [
@@ -884,11 +884,11 @@
       "metadata": {
         "trusted": false,
         "id": "1nn58WyDqteA",
-        "outputId": "42a91474-4fc2-4e5d-eac8-af932e12fb60",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 532
-        }
+        },
+        "outputId": "42a91474-4fc2-4e5d-eac8-af932e12fb60"
       },
       "cell_type": "code",
       "source": [
@@ -1166,11 +1166,11 @@
       "metadata": {
         "trusted": false,
         "id": "dGDyJ7lPqteB",
-        "outputId": "427ce583-caa0-4ca0-cf17-d8c00050f279",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 581
-        }
+        },
+        "outputId": "427ce583-caa0-4ca0-cf17-d8c00050f279"
       },
       "cell_type": "code",
       "source": [
@@ -1461,11 +1461,11 @@
       "metadata": {
         "trusted": false,
         "id": "7GW2gcGBqteC",
-        "outputId": "afd58750-e0ad-46f1-e103-214846fa38ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 792
-        }
+        },
+        "outputId": "afd58750-e0ad-46f1-e103-214846fa38ed"
       },
       "cell_type": "code",
       "source": [
@@ -1767,11 +1767,11 @@
       "metadata": {
         "trusted": false,
         "id": "qwdyBVB6qteD",
-        "outputId": "c92a76a1-4e84-4607-fc8e-71d6b0ee34c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 629
-        }
+        },
+        "outputId": "c92a76a1-4e84-4607-fc8e-71d6b0ee34c0"
       },
       "cell_type": "code",
       "source": [
@@ -2076,11 +2076,11 @@
       "metadata": {
         "trusted": false,
         "id": "aa0RNCgKqteE",
-        "outputId": "4cecbb07-6496-4482-e039-949bf32a8410",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 789
-        }
+        },
+        "outputId": "4cecbb07-6496-4482-e039-949bf32a8410"
       },
       "cell_type": "code",
       "source": [
@@ -2382,11 +2382,11 @@
       "metadata": {
         "trusted": false,
         "id": "nu7juN3uqteF",
-        "outputId": "b2ab3909-7042-4f28-8650-0fab774b4492",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 806
-        }
+        },
+        "outputId": "b2ab3909-7042-4f28-8650-0fab774b4492"
       },
       "cell_type": "code",
       "source": [
@@ -2688,11 +2688,11 @@
       "metadata": {
         "trusted": false,
         "id": "Ve11vsr6qteG",
-        "outputId": "f7fdf867-d954-4cd3-d071-c35f9f4f90cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 809
-        }
+        },
+        "outputId": "f7fdf867-d954-4cd3-d071-c35f9f4f90cb"
       },
       "cell_type": "code",
       "source": [
@@ -2994,11 +2994,11 @@
       "metadata": {
         "trusted": false,
         "id": "RbinNrcvqteH",
-        "outputId": "c05d21ae-0a07-4d96-f6fd-b086a9ef141d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c05d21ae-0a07-4d96-f6fd-b086a9ef141d"
       },
       "cell_type": "code",
       "source": [
@@ -3625,11 +3625,11 @@
       "metadata": {
         "trusted": false,
         "id": "_7NIyIzFqteI",
-        "outputId": "5e8b9b94-219f-4cdf-e11d-688a65b918b1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 774
-        }
+        },
+        "outputId": "5e8b9b94-219f-4cdf-e11d-688a65b918b1"
       },
       "cell_type": "code",
       "source": [
@@ -3931,11 +3931,11 @@
       "metadata": {
         "trusted": false,
         "id": "5bAjutroqteJ",
-        "outputId": "05e24785-e178-4d5d-df90-4d60afab8434",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 809
-        }
+        },
+        "outputId": "05e24785-e178-4d5d-df90-4d60afab8434"
       },
       "cell_type": "code",
       "source": [
@@ -4237,11 +4237,11 @@
       "metadata": {
         "trusted": false,
         "id": "yFMnd62sqteK",
-        "outputId": "0b480c5e-9711-42d9-ef35-94a108e84961",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "outputId": "0b480c5e-9711-42d9-ef35-94a108e84961"
       },
       "cell_type": "code",
       "source": [
@@ -4544,11 +4544,11 @@
       "metadata": {
         "trusted": false,
         "id": "yAVFdHm3qteL",
-        "outputId": "0e2b5015-a504-4171-c476-bc4d3c2383b2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 363
-        }
+        },
+        "outputId": "0e2b5015-a504-4171-c476-bc4d3c2383b2"
       },
       "cell_type": "code",
       "source": [
@@ -4847,10 +4847,10 @@
       "metadata": {
         "trusted": false,
         "id": "R5vs4vk3qteL",
-        "outputId": "e94b8cbe-27f0-4553-8e07-a7d9de19f94a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e94b8cbe-27f0-4553-8e07-a7d9de19f94a"
       },
       "cell_type": "code",
       "source": [
@@ -4884,10 +4884,10 @@
       "metadata": {
         "trusted": false,
         "id": "StBb7M9qqteM",
-        "outputId": "5013b4ed-fe21-440a-9c4a-e99a9446df86",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "5013b4ed-fe21-440a-9c4a-e99a9446df86"
       },
       "cell_type": "code",
       "source": [
@@ -4921,10 +4921,10 @@
       ],
       "metadata": {
         "id": "GGvvo0MHJhfG",
-        "outputId": "347c8248-79fe-443b-e4c9-71ef3c2b8834",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "347c8248-79fe-443b-e4c9-71ef3c2b8834"
       },
       "execution_count": 26,
       "outputs": [
@@ -4956,11 +4956,11 @@
       ],
       "metadata": {
         "id": "cOPn4MBCKg_X",
-        "outputId": "e95fb382-d154-440b-8680-df65d3a62f9a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "e95fb382-d154-440b-8680-df65d3a62f9a"
       },
       "execution_count": 27,
       "outputs": [
@@ -5091,11 +5091,11 @@
       ],
       "metadata": {
         "id": "kBQq26GhJDPZ",
-        "outputId": "9c2823d8-9b09-49ae-8659-655995929d49",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 455
-        }
+        },
+        "outputId": "9c2823d8-9b09-49ae-8659-655995929d49"
       },
       "execution_count": 28,
       "outputs": [
@@ -5721,217 +5721,71 @@
       "metadata": {
         "trusted": false,
         "id": "vEUGPmx7qteZ",
-        "outputId": "87f7659a-ac44-4c6c-b71a-6f19c5b2f6e6",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 332
-        }
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "82b6bfbc-64b9-4628-e82e-e7e19fef62f5"
       },
       "cell_type": "code",
       "source": [
         "df_sales_summary = pd.merge(df_receipt, df_customer,how='inner',on='customer_id')\n",
         "df_sales_summary['era'] = df_sales_summary['age'].apply(lambda x: math.floor(x/10) * 10)\n",
+        "# print(df_sales_summary['age'])\n",
+        "# 0        22\n",
+        "# 1        22\n",
+        "# 2        22\n",
+        "# 3        22\n",
+        "# 4        22\n",
+        "# print(df_sales_summary['era'])\n",
+        "# 0        20\n",
+        "# 1        20\n",
+        "# 2        20\n",
+        "# 3        20\n",
+        "# 4        20\n",
         "df_sales_summary = pd.pivot_table(df_sales_summary, index='era', columns='gender_cd', values='amount',  aggfunc='sum').reset_index()\n",
         "df_sales_summary.columns = ['era', 'male', 'female', 'unknown']\n",
         "df_sales_summary\n",
         "\n",
         "\n",
         "# TODO apply, math.floor,\n",
+        "# applyメソッドは、行全体や列全体に対して、同じ操作をしたいときに使用\n",
+        "# https://note.nkmk.me/python-pandas-map-applymap-apply/\n",
         "\n",
+        "# 小数点以下を切り捨て: math.floor() \n",
+        "# https://note.nkmk.me/python-math-floor-ceil-int/\n",
         "\n"
       ],
-      "execution_count": 41,
+      "execution_count": 43,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "  <div id=\"df-13cb2bd3-ed4f-4560-b42a-001a45141190\">\n",
-              "    <div class=\"colab-df-container\">\n",
-              "      <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>era</th>\n",
-              "      <th>male</th>\n",
-              "      <th>female</th>\n",
-              "      <th>unknown</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>10</td>\n",
-              "      <td>1591.0</td>\n",
-              "      <td>149836.0</td>\n",
-              "      <td>4317.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>20</td>\n",
-              "      <td>72940.0</td>\n",
-              "      <td>1363724.0</td>\n",
-              "      <td>44328.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>30</td>\n",
-              "      <td>177322.0</td>\n",
-              "      <td>693047.0</td>\n",
-              "      <td>50441.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>40</td>\n",
-              "      <td>19355.0</td>\n",
-              "      <td>9320791.0</td>\n",
-              "      <td>483512.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>50</td>\n",
-              "      <td>54320.0</td>\n",
-              "      <td>6685192.0</td>\n",
-              "      <td>342923.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>5</th>\n",
-              "      <td>60</td>\n",
-              "      <td>272469.0</td>\n",
-              "      <td>987741.0</td>\n",
-              "      <td>71418.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>6</th>\n",
-              "      <td>70</td>\n",
-              "      <td>13435.0</td>\n",
-              "      <td>29764.0</td>\n",
-              "      <td>2427.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>7</th>\n",
-              "      <td>80</td>\n",
-              "      <td>46360.0</td>\n",
-              "      <td>262923.0</td>\n",
-              "      <td>5111.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>8</th>\n",
-              "      <td>90</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>6260.0</td>\n",
-              "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-13cb2bd3-ed4f-4560-b42a-001a45141190')\"\n",
-              "              title=\"Convert this dataframe to an interactive table.\"\n",
-              "              style=\"display:none;\">\n",
-              "        \n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "       width=\"24px\">\n",
-              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
-              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
-              "  </svg>\n",
-              "      </button>\n",
-              "      \n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      flex-wrap:wrap;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "      <script>\n",
-              "        const buttonEl =\n",
-              "          document.querySelector('#df-13cb2bd3-ed4f-4560-b42a-001a45141190 button.colab-df-convert');\n",
-              "        buttonEl.style.display =\n",
-              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-13cb2bd3-ed4f-4560-b42a-001a45141190');\n",
-              "          const dataTable =\n",
-              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                     [key], {});\n",
-              "          if (!dataTable) return;\n",
-              "\n",
-              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "            + ' to learn more about interactive tables.';\n",
-              "          element.innerHTML = '';\n",
-              "          dataTable['output_type'] = 'display_data';\n",
-              "          await google.colab.output.renderOutput(dataTable, element);\n",
-              "          const docLink = document.createElement('div');\n",
-              "          docLink.innerHTML = docLinkHtml;\n",
-              "          element.appendChild(docLink);\n",
-              "        }\n",
-              "      </script>\n",
-              "    </div>\n",
-              "  </div>\n",
-              "  "
-            ],
-            "text/plain": [
-              "   era      male     female   unknown\n",
-              "0   10    1591.0   149836.0    4317.0\n",
-              "1   20   72940.0  1363724.0   44328.0\n",
-              "2   30  177322.0   693047.0   50441.0\n",
-              "3   40   19355.0  9320791.0  483512.0\n",
-              "4   50   54320.0  6685192.0  342923.0\n",
-              "5   60  272469.0   987741.0   71418.0\n",
-              "6   70   13435.0    29764.0    2427.0\n",
-              "7   80   46360.0   262923.0    5111.0\n",
-              "8   90       NaN     6260.0       NaN"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 41
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0        22\n",
+            "1        22\n",
+            "2        22\n",
+            "3        22\n",
+            "4        22\n",
+            "         ..\n",
+            "65677    66\n",
+            "65678    40\n",
+            "65679    40\n",
+            "65680    32\n",
+            "65681    32\n",
+            "Name: age, Length: 65682, dtype: int64\n",
+            "0        20\n",
+            "1        20\n",
+            "2        20\n",
+            "3        20\n",
+            "4        20\n",
+            "         ..\n",
+            "65677    60\n",
+            "65678    40\n",
+            "65679    40\n",
+            "65680    30\n",
+            "65681    30\n",
+            "Name: era, Length: 65682, dtype: int64\n"
+          ]
         }
       ]
     },
